--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${version.jackson}</version>
         </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${version.jackson}</version>
+      </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -52,11 +58,7 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.4.0-rc1</version>
         </dependency>
-        <dependency>
-            <groupId>eu.europeana.metis</groupId>
-            <artifactId>metis-dereference-client</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
       <dependency>
         <groupId>io.swagger</groupId>
         <artifactId>swagger-annotations</artifactId>
@@ -66,6 +68,11 @@
         <groupId>org.springframework.plugin</groupId>
         <artifactId>spring-plugin-metadata</artifactId>
         <version>1.2.0.RELEASE</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>${version.commonslang}</version>
       </dependency>
     </dependencies>
 </project>
