--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -114,6 +114,11 @@
             <version>${version.jedis}</version>
         </dependency>
         <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>${version.redisson}</version>
+        </dependency>
+        <dependency>
             <groupId>eu.europeana.metis</groupId>
             <artifactId>metis-common</artifactId>
             <version>${project.version}</version>
