--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -52,6 +52,14 @@
           <artifactId>wstx-asl</artifactId>
           <groupId>org.codehaus.woodstox</groupId>
         </exclusion>
+        <exclusion>
+          <artifactId>slf4j-simple</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>slf4j-jdk14</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
