--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -97,5 +97,10 @@
       <artifactId>commons-lang3</artifactId>
       <version>${version.commons.lang}</version>
     </dependency>
+    <dependency>
+      <groupId>eu.europeana.metis</groupId>
+      <artifactId>metis-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
