--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -40,6 +40,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>eu.europeana.cloud</groupId>
+      <artifactId>ecloud-service-dps-rest-client-java</artifactId>
+      <version>${version.ecloud}</version>
+    </dependency>
+    <dependency>
       <groupId>com.rabbitmq</groupId>
       <artifactId>amqp-client</artifactId>
       <version>${version.rabbitmq}</version>
