--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -50,6 +50,11 @@
       <version>${version.ecloud}</version>
     </dependency>
     <dependency>
+      <groupId>eu.europeana.cloud</groupId>
+      <artifactId>ecloud-service-dps-rest-client-java</artifactId>
+      <version>${version.ecloud}</version>
+    </dependency>
+    <dependency>
       <groupId>eu.europeana.corelib</groupId>
       <artifactId>corelib-web</artifactId>
       <version>${version.corelib}</version>
