--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -2,7 +2,7 @@
 max.concurrent.threads=
 monitor.check.interval.in.secs=
 periodic.failsafe.check.in.secs=
-periodic.scheduler.check.in.secs=
+periodic.scheduler.check.in.millisecs=
 redisson.lock.watchdog.timeout.in.secs=
 polling.timeout.for.cleaning.completion.service.in.secs=
 
