--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -92,6 +92,17 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${version.spring}</version>
+      <exclusions>
+   	    <exclusion>
+   		  <groupId>commons-logging</groupId>
+   		  <artifactId>commons-logging</artifactId>
+   	    </exclusion>
+   	  </exclusions>			
+    </dependency>
+    <dependency>                                    
+    	<groupId>org.slf4j</groupId>                
+    	<artifactId>jcl-over-slf4j</artifactId>     
+    	<version>${version.slf4j}</version>  
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
