--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -54,4 +54,5 @@ authentication.baseUrl=
 #CORS
 allowed.cors.hosts=*
 
+#Use this to specify the FQDN where the application will be hosted under
 metis.core.baseUrl=
